# l2cap_reproducer

./: CMakeLists.txt  README.md  VERSION  app.overlay  bluetooth.py  prj.conf  requirements.txt  sysbuild.conf  west.yml  zephyr.hex
src/: main.cpp
